<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="register">Quiero registrarme</string>
    <string name="guest">Quiero ver los productos</string>
    <string name="app_name">AllStars</string>
    <string name="register_message">Por favor llene los campos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Invitado</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_message">Bienvenido(a)</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_categorias">Categorías</string>
    <string name="menu_logout">Cerrar sesión</string>
    <string name="menu_favoritos">Favoritos</string>
    <string name="menu_profile">Mi perfil</string>
    <string name="menu_services">Mis servicios</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="app_precio">$100</string>
    <string name="app_titulo">Iphone X</string>
    <string name="app_cantidad">Cantidad</string>
    <string name="app_descripcion">Descripción</string>
    <string name="app_descripcion_producto">
        Este es un mensaje de prueba, donde se describira el producto seleccionado
    </string>

    <string name="about_title">ACERCA DE LA APP</string>
    <string name="about">Importante</string>

    <string name="app_about_app">
        ESTA APLICACIÓN FUE DESARROLLADA POR
        CRISTIAN AUGUSTO ARMENTA GARCIA, ESTEBAN ALEXIS ARCE GOMEZ Y NORBERTO GABRIEL VENTURA SANCHEZ.
        LOS DATOS MOSTRADOS COMO IMAGENES, TITULOS, PRECIOS; SON DE PRUEBA, NO SON DATOS VERIDICOS NI
        DINAMICOS POR EL MOMENTO.
    </string>

    <string name="app_contacto">Contacto</string>
    <string name="app_contacto_info">Puedes contactarme a través del siguiente número 4141414141
    o através de mi correo holamundo@hotmail.com




    </string>

    <string name="shared_profile_label">Perfil</string>
    <string name="shared_profile_personal_info_label">Información personal</string>

    <string name="app_btn_agregar">AGREGAR</string>
    <string name="app_btn_comprar">COMPRAR</string>
    <string-array name="cantidades">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
    </string-array>

    <string name="user_input">Usuario</string>
    <string name="pass_input">Contraseña</string>
    <string name="name_input">Nombres</string>
    <string name="last_name_input">Apellidos</string>
    <string name="email_input">Correo electrónico</string>
    <string name="phone_input">Celular</string>
    <string name="sign_in">Iniciar sesión</string>
    <string name="sign_in_as_artist">Iniciar sesión como artista</string>
    <string name="sign_up">Registrarme</string>
    <string name="sign_up_as_artist">Registrarme como artista</string>

    <string name="btn_bio">Biografía</string>
    <string name="btn_favoritos">Añadir a favoritos</string>
    <string name="btn_contratar">Contratar</string>
    <string name="btn_servicios">Servicios</string>

    <string name="profile_title">Perfil</string>

    <!-- START - Strings for Register Artist Layout -->
    <string name="sign_up_artist_name_hint">Nombre artístico</string>
    <string name="sign_up_artist_type_hint">¿Qué tipo de artista eres?"\n"Por favor selecciona al menos una opción</string>
    <string name="sign_up_artist_chk1">Músico</string>
    <string name="sign_up_artist_chk2">Youtuber</string>
    <string name="sign_up_artist_chk3">Comediante</string>
    <string name="sign_up_artist_chk4">Actor</string>
    <string name="sign_up_artist_chk5">Actriz</string>
    <string name="sign_up_artist_chk6">Deportista</string>
    <!-- END - Strings for Register Artist Layout -->

    <!-- START - Strings for Edit Artist Layout -->
    <string name="edit_artist_name_hint">Nombre que los usuarios ven</string>
    <string name="edit_artist_type_hint">Perteneces a esta(s) categorías</string>
    <string name="edit_artist_chk1">Músico</string>
    <string name="edit_artist_chk2">Youtuber</string>
    <string name="edit_artist_chk3">Comediante</string>
    <string name="edit_artist_chk4">Actor</string>
    <string name="edit_artist_chk5">Actriz</string>
    <string name="edit_artist_chk6">Deportista</string>
    <string name="edit_artist_password_hint">Contraseña actual</string>
    <string name="edit_artist_biography_hint">Biografía actual. Puedes agregar algo más</string>
    <string name="edit_artist_apply_changes_hint">APLICAR CAMBIOS</string>
    <!-- END - Strings for Edit Artist Layout -->

    <!-- VIEW PROFILE BLOCK-->
    <string name="view_artist_biography">Biografía actual</string>
    <string name="view_artist_ranking">Ranking actual</string>
    <string name="view_artist_subtitle">Información actual</string>
    <!-- VIEW PROFILE BLOCK-->


    <!-- Services block-->
    <string name="recycler_title">SERVICIOS OFERTADOS</string>
    <string name="label_service_name">Nombre</string>
    <string name="label_fragment_title">Nuevo servicio</string>
    <string name="service_name_input_hint">Algo breve</string>
    <string name="label_service_name_mini_hint">Ejemplo: Show de comedia</string>
    <string name="label_service_description">Descripción</string>
    <string name="service_description_input_hint">Aquí van todos los detalles</string>
    <string name="label_service_price">Precio</string>
    <string name="label_service_maximum_time">Duración máxima en horas</string>
    <string name="btn_publish">Publicar</string>
    <!-- Services recycler block-->

    <string-array name="array_sex">
        <item>Genero</item>
        <item>Masculino</item>
        <item>Femenino</item>
        <item>Prefiero no decirlo</item>
    </string-array>

    <string-array name="array_eventos">
        <item>Evento</item>
        <item>Concierto grande/mediano</item>
        <item>Concierto pequeño/Bar</item>
        <item>Feria</item>
        <item>Cumpleaños</item>
        <item>Película</item>
        <item>TV</item>
        <item>Otro</item>
    </string-array>

    <string-array name="array_publico">
        <item>Público</item>
        <item>Todas las edades</item>
        <item>Menos de 12 años</item>
        <item>Entre 13 y 17 años</item>
        <item>Mayores de 18 años</item>
    </string-array>

    <string name="alert_success_signup">Registro exitoso</string>
    <string name="okay">Okay</string>

    <string name="titleContratacion">Datos de fecha/hora</string>
    <string name="fechaInicio">Fecha de inicio</string>
    <string name="fechaFin">Fecha de fin</string>
    <string name="horaInicio">Hora de inicio</string>
    <string name="horaFin">Hora de fin</string>
    <string name="ingresaFecha">Ingresa la fecha</string>
    <string name="ingresaHora">Ingresa la hora</string>

    <string name="tipoPublico">Tipo de público</string>
    <string name="tipoShow">Tipo de evento</string>
    <string name="detalles">Detalles extras</string>
    <string name="servicio">Servicio</string>

    <string name="iraMapas">Elegir ubicación</string>
    <string name="ubicacion">Ubicación</string>

    <string name="see_profile">Ver perfil</string>
    <string name="edit_profile">Editar perfil</string>
    <string name="delete_account">Eliminar cuenta</string>
    <string name="requests">Mis solicitudes</string>
    <string name="pending_requests">Solicitudes pendientes</string>
    <string name="accepted_requests">Solicitudes aceptadas</string>
    <string name="rejected_requests">Solicitudes rechazadas</string>
    <string name="done_requests">Solicitudes completadas</string>


    <!--Services menu block-->
    <string name="add_service">Agrega un servicio</string>
    <string name="see_services">Ver servicios</string>
    <string name="edit_services">Editar servicios</string>
    <string name="delete_services">Eliminar servicios</string>
    <!--Services menu block-->

    <string name="enviar_solicitud">Enviar solicitud</string>
    <string name="nombre_solicitante">Nombre del solicitante</string>
    <string name="titulo_solicitud">Solicitud</string>

    <string name="requerido">Campo requerido</string>
    <string name="solicitud_enviada">
        ¡Tu solicitud ha sido enviada, en breve tendras respuesta!
    </string>
    <string name="regresar">Regresar</string>
    <string name="rechazar">Rechazar</string>
    <string name="aceptar">Aceptar</string>
    <string name="solicitud_aceptada">
        ¡Solicitud aceptada! \n \n
        Te haremos saber cuando el usuario realice el pago, tiene 24 horas para realizarlo
    </string>

    <string name="evento_terminado">
        ¡Finalizaste el evento!
    </string>
    <string name="solicitud_rechazada">
        ¡Solicitud rechazada!
    </string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="facebook_app_id">564233794475101</string>
    <string name="fb_login_protocol_scheme">fb564233794475101</string>
    <string name="ir_inicio">Ir al inicio</string>

    <!--SEARCH BAR BLOCK-->
    <string name="search_hint">Busca un artista o categoría</string>
    <string name="groupRanking">Ranking</string>
    <string name="groupRequests">Solicitudes</string>
    <string-array name="groupRanking">
        <item>Min</item>
        <item>Max</item>
    </string-array>
    <string-array name="groupRequests">
        <item>Min</item>
        <item>Max</item>
    </string-array>
    <!--SEARCH BAR BLOCK-->

</resources>
