<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_profile"
        android:visible="false"
        android:title="@string/menu_profile" >
        <menu>
            <item
                android:visible="false"
                android:id="@+id/see_profile"
                android:icon="@drawable/ic_my_profile"
                android:title="@string/see_profile" />
            <item
                android:visible="false"
                android:id="@+id/edit_profile"
                android:icon="@drawable/ic_edit_profile"
                android:title="@string/edit_profile" />
            <item
                android:visible="false"
                android:id="@+id/delete_account"
                android:icon="@drawable/ic_delete_account"
                android:title="@string/delete_account" />
        </menu>

    </item>

    <item
        android:id="@+id/nav_requests"
        android:visible="false"
        android:title="@string/requests" >
        <menu>
            <item
                android:visible="false"
                android:id="@+id/requests"
                android:icon="@drawable/ic_pending24dp"
                android:title="@string/pending_requests" />
            <item
                android:visible="false"
                android:id="@+id/accepted_requests"
                android:icon="@drawable/ic_payment_black_24dp"
                android:title="@string/accepted_requests" />
            <item
                android:visible="false"
                android:id="@+id/rejected_requests"
                android:icon="@drawable/ic_rejected24dp"
                android:title="@string/rejected_requests" />

            <item
                android:visible="false"
                android:id="@+id/done_requests"
                android:icon="@drawable/ic_accept24dp"
                android:title="@string/done_requests" />

        </menu>

    </item>

    <item
        android:id="@+id/nav_services"
        android:visible="false"
        android:title="@string/menu_services" >
        <menu>
            <item
                android:visible="false"
                android:id="@+id/add_service"
                android:icon="@drawable/ic_add_service"
                android:title="@string/add_service" />
            <item
                android:visible="false"
                android:id="@+id/see_services"
                android:icon="@drawable/ic_see_services"
                android:title="@string/see_services" />
            <item
                android:visible="false"
                android:id="@+id/edit_services"
                android:icon="@drawable/ic_edit_profile"
                android:title="@string/edit_services" />
            <item
                android:visible="false"
                android:id="@+id/delete_services"
                android:icon="@drawable/ic_delete_account"
                android:title="@string/delete_services" />

        </menu>

    </item>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_house"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_categorias" />

        <item
            android:id="@+id/nav_carrito"
            android:visible="true"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/menu_favoritos" />


    </group>

    <item android:title="Ajustes">
        <menu>
            <item
                android:visible="true"
                android:id="@+id/nav_signin"
                android:icon="@drawable/ic_account_circle_black_24dp"
                android:title="@string/sign_in" />
            <item
                android:visible="false"
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_logout" />

        </menu>
    </item>

</menu>
