<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".Contratacion">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/fechaInicio"
            android:layout_width="180dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="136dp"
            android:ems="10"
            android:hint="@string/fechaInicio"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:focusable="false"/>

        <EditText
            android:id="@+id/fechaFin"
            android:layout_width="180dp"
            android:layout_height="48dp"
            android:layout_marginTop="136dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:hint="@string/fechaFin"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.895"
            app:layout_constraintStart_toEndOf="@+id/fechaInicio"
            app:layout_constraintTop_toTopOf="parent"
            android:focusable="false"/>

        <EditText
            android:id="@+id/horaInicio"
            android:layout_width="180dp"
            android:layout_height="45dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="76dp"
            android:ems="10"
            android:focusableInTouchMode="true"
            android:hint="@string/horaInicio"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fechaInicio" />

        <EditText
            android:id="@+id/horaFin"
            android:layout_width="180dp"
            android:layout_height="45dp"
            android:layout_marginTop="76dp"
            android:ems="10"
            android:hint="@string/horaFin"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.485"
            app:layout_constraintStart_toEndOf="@+id/horaInicio"
            app:layout_constraintTop_toBottomOf="@+id/fechaFin" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/titleContratacion"
            android:textColor="@color/colorPrimary"
            android:textSize="24dp"
            app:layout_constraintBottom_toTopOf="@+id/fechaFin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>